<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.88"
            android:background="#eceff4"
            android:digits="0123456789."
            android:maxLength="15"
            android:hint="@string/input_ip_hint"
            android:singleLine="true" />

        <Button
            android:id="@+id/button1"
            android:layout_width="64dp"
            android:layout_height="34dp"
            android:background="#ff377bee"
            android:text="@string/button_query"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:textColor="#8B4C39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_null"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:textColor="#8B4C39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_null"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:textColor="#8B4C39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_null"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="4dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView6"
            android:textColor="#8B4C39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_null"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</RelativeLayout>